--- a/.simulation/slides.css
+++ b/.simulation/slides.css
@@ -24,17 +24,19 @@
 .prettyprint .pln {
   color: blue;
 }
-
 pre {
   font-family: 'Source Code Pro', 'Courier New', monospace;
   font-size: 20px;
-  color: pink;
+  color: black;
   line-height: 28px;
-  padding: 10px 0 10px 60px;
+
   letter-spacing: -1px;
   margin-bottom: 20px;
-  width: 106%;
-  left: -60px;
+ 
+  width: 100%; /* 106%; */
+  left: 0; /* -60px; */
+  padding: 10px 15px 10px 15px; /* 10px 0 10px 60px; */
+  
   position: relative;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
