--- a/.simulation/css/slides.css
+++ b/.simulation/css/slides.css
@@ -48,3 +48,24 @@ slides > slide {
   overflow-x: auto !important;
   overflow-y: auto !important;
 }
+
+body {
+  font-family: Roboto Condensed;
+  font-weight: normal;
+  color: #000000;
+}
+
+.remark-slide-content {
+  background-color: #FFFFFF;
+  font-size: 20px;
+  padding: 1em 4em 1em 4em;
+}
+.remark-slide-content h1 {
+    font-size: 55px;
+}
+.remark-slide-content h2 {
+    font-size: 45px;
+}
+.remark-slide-content h3 {
+    font-size: 35px;
+}
