--- a/.simulation/css/xaringan-themer.css
+++ b/.simulation/css/xaringan-themer.css
@@ -203,6 +203,11 @@ slides > slide {
 }
 
 
+.scrollable-slide {
+    height: 800px;
+    overflow-y: auto !important;
+}
+
 /* additional aesthetic
 .remark-slide-content {
   background-color: #FFFFFF;
